test_suite5/DRACO/test_suite/draco-pinpoint/passing/pass_writeln_stmt.draco
proc main() void : writeln(a); corp;
