test_suite5/DRACO/test_suite/draco-pinpoint/failing/fail_pretend_stmt_non_void_type.draco
proc main() void : pretend(a, int); corp;

